--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -4,6 +4,7 @@ author: "Heidi Marie Rolfsnes and Ann Elisabeth Jacobsen"
 output:
   html_document: default
   pdf_document: default
+
 ---
 
 ```{r Packages}
@@ -517,7 +518,6 @@ mutate(lea = OBS_VALUE, Year = TIME_PERIOD, nuts2=geo) %>%
   select(nuts2, Year, lea)
 ```
 
-
 ```{r GDP per capita for nuts 2}
 #| echo = FALSE
 gdppop2010 <- gdppop %>%
@@ -533,11 +533,10 @@ gdppop2010 <- gdppop %>%
   mutate(gdp_per_capita = gdp_n2/pop_n2*1000000)
 ```
 
-
 ## Growth and inequity
 
-Further in the assignment, we will look at growth and inequity in the countries at Nuts2 level.  
-Before we go further we want to make new variables for the data set. Moving forward we will make linear models (lm) and a form of regression that is simple. A simple regression model will show us the relationship between two variables (R for everyone s. 265). By using this model we can find the Y value when X = 0. 
+In this assignment, we will look at growth and inequity in the countries at Nuts2 level.  
+Before we go further we want to make new variables for the data set. Moving forward we will also make linear models (lm) and a form of regression that is simple. A simple regression model will show us the relationship between two variables. By using this model we can find the Y value when X = 0 (R for everyone s. 265). 
 
 ```{r New variables}
 #| echo = FALSE
@@ -549,8 +548,7 @@ left_join(Transport, by = c("nuts2", "Year"))%>%
   mutate(nuts0 = substr(nuts2,1,2)) %>%
 filter(Year == 2010)
 ```
-
-The gini value goes from 0 to 1. Where 0 is a perfect equality and 1 is unequality. As we can see in the summary there are gini.... 
+The gini value goes from 0 to 1. Where 0 is a perfect equality and 1 is inequality.
 When the gini is 0, it is likely to believe there is missing som data for 2010. Further we will use filter to take away the gini´s who are zero. 
 
 ```{r}
@@ -573,7 +571,7 @@ ggplot()+
 ```
 
 In this ggplot, we can see how the Gini is distributed per country.
-We can see that France has a point that stands out from the others, while the other countries have most of their points between 0 and 0.1. What we have to be observant about is that the countries Denmark, Hungary, Portugal and Slovakia don't have so many observations after we divided the countries into Nuts2 levels, that´s why we choose to look only look at France by itself and the alle the countries when we move forward in the assignment. 
+We can see that France has a point that stands out from the others, while the other countries have most of their points between 0 and 0.1. We have to be observant about that the countries Denmark, Hungary, Portugal and Slovakia don't have so many observations after we divided the countries into Nuts2 levels, that´s why we choose to only look at France by itself and all the countries together when we move forward in the assignment. 
 
 ```{r}
 #| echo = FALSE
@@ -611,15 +609,14 @@ lm_residuals_plot <- function(lmdata){
 }
 ```
 
+## Estimate the effect of regional development on regional inequality GINI for the year 2010
 
-## Estimate the effecte of regional development on regional inequality GINI for the year 2010
-
-To estimate the the effecte between a regional development and regional inequality we can use the formula: 
+When we calculate regional development against regional inequality, we use the values we have found in Gini and GDP per capita.
+To estimate the effect between a regional development and regional inequality we can use the formula: 
 
 $$ Regional inequality_i = \beta_1 + \beta_2Regional development_i+u_i$$
-
 This equation tells us what the regional inequality will be when the regional development is = 0 The slope of the curve will show us how much inequality will change for each increase in development.
-
+If we increase regional development by 1, regional inequality will increase by 1.
 
 ```{r}
 #| echo = FALSE
@@ -629,7 +626,8 @@ ggplot(gdppop2010, aes(x = gdp_per_capita, y = Gini)) +
   labs(x = "GDP per capita 2010", Y = "Gini")+
   labs(title = "Gini and GDP per capita in 2010 for all countries")
 ```
-In this ggplot we look at the relationship between Gini and GDP per capita in 2010 for all countries. We can see that very few of the points hit the line when we look at all the countries together.
+
+In this ggplot we look at the relationship between Gini and GDP per capita in 2010 for all countries. We see in the graph that we have points that are above and below the regression line. There are two points on the right that stand out significantly.
 
 
 ```{r}
@@ -663,12 +661,10 @@ lm.5 = lm(Gini2 ~ gdp_per_capita, data = gdppop2010)
 
 When we look at the table above we can see the impact regional development (X) has on regional inequality (Y). This means how much an increase in X will mean for an increase in Y. Portugal is the only country that has a negative impact. We will take a closer look at this country by country. From this and earlier observations we choose to remove Paris from the France2010 dataset. 
 
-
 ### Discuss the goodness of fit of our estiamted model 
 
 When we look at the simple regression that we have done, it is R2 that can help us explain whether the variables have any relationship with each other. R2 tells us how much spread we have in the independent variable. The value in R2 can be between 0 and 1. When R2 is 1 it tells us that the independent variable has all the influence on the dependent variable. If it is 0, the independent variable has no influence on the dependent variable (Forskningsmetode - s.345).
- We can see that Denmark and France have a high R2 value, Denmark with 0,813 and France with 0,814. Denmark only has 4 observations, which tells us that we cannot completely trust this result. France, on the other hand, has 22 observations, the more observations the better outcome of the result  .
-When we look at all the countries together, we can see that both R2 is only 0.122, we can see that in the context of......
+We can see that Denmark and France have a high R2 value, Denmark with 0,813 and France with 0,814. Denmark only has 4 observations, which tells us that we cannot completly trust this result. France, on the other hand, has 22 observations, the more observations the better outcome of the result .
 
 
 ```{r}
@@ -688,10 +684,6 @@ ggplot(France2010, aes(x = gdp_per_capita, y = Gini)) +
 ```
 
 
-
-
-
-
 ### Plot the residuals against the predicted values of our model 
 
 When we have carried out a regression analysis, we get a line that gives us an overview of where the best hits are made. Residuals show the distance to the best fit line. There can be both positive and negative residuals. If the value is above the line it is positive and if it is below the line it is negative.
@@ -701,7 +693,7 @@ When we have carried out a regression analysis, we get a line that gives us an o
 lm_residuals_plot(gdppop2010) +
   labs(title = "Residuals for all countries")
 ```
-When we look at all the countries together, we can see that the regression line has both positive and negative hits on the line.
+When we look at all the countries together, we can see that the regression line has both positive and negative hits on the line. We can also se that the regions in each country is close to eachother except from France and Denmark which are a little more spread out on the line. 
 
 
 ```{r Residuals for France }
@@ -710,7 +702,7 @@ lm_residuals_plot(France2010) +
 labs(title = "Residuals for France")
 ```
 
-As we said earlier we are now only looking at France because it has 22 observations and are more trustworthy then the others. We are also looking at all countries together. When we look at the graph for all the countries and at the one for France, we can see in both graphs that there are some of France´s regions that stands out.The best is when the points are on the line, but as we see above most of the regions are above or below the line which means there is a large variation between the regions. In the graph, we can also see that France has a much steeper curve than when we look at all the countries together. With a steeper curve, one must have more GDP to increase the Gini.
+As we said earlier we are now only looking at France because it has 21 observations (when we remove Paris) and are more trustworthy then the others. We are also looking at all countries together. When we look at the graph for all the countries and at the one for France, we can see in both graphs that there are some of France´s regions that stands out.The best is when the points are on the line, but as we can see above most of the regions are above or below the line which means there is a large variation between the regions. In the graph, we can also see that France has a  steeper curve than if we look at all the countries together. With a steeper curve, one must have more GDP to increase the Gini.
 
 ### Discuss the classical assumptions OLS in light of your data and plots
 
@@ -732,39 +724,21 @@ plot(olsfr) +
 
 For linear regression there are seven OLS assumptions that are classical. To produce the the best estimates we usually use the first six assumptions.
 
-Assumption 1: The regression model is linear in the coefficients and the error term
-
-When we look at all the countries it is close to linear, but when we look at France who have the most nuts2 regions we can see that 
-
-Assumption 2:The error term has a population mean of zero
-
-We can see that there are variations in the X variable both in France and in all the countries combined. which may indicate that we have fulfilled the second requirement for OLS
-Assumption 3:All independent variables are uncorrelated with the error term
-
+* Assumption 1: The regression model is linear in the coefficients and the error term
+When we look at all the countries it is close to linear, but when we look at France who have the most nuts2 regions, the regions either is above or under the line. 
+* Assumption 2:The error term has a population mean of zero
+We can see that there are variations in the X variable both in France and in all the countries combined, which may indicate that we have fulfilled the second requirement for OLS
+* Assumption 3:All independent variables are uncorrelated with the error term
 The third assumption is about having a random dataset, even if we have made changes such as removing regions in France, we will still say that we have a random dataset based on the population.
-
-Assumption 4:Observations of the error term are uncorrelated with each other
-
-Assumption 5:The error term has a constant variance (no heteroscedasticity)
-
-When we look at the graph for France the line is not flat at all, which means it is heteroscedasticity. 
-
-Assumption 6:The error term is normally distributed (optional)
-
-```{r normal q-q plot
-qqnorm(ols)
-qqline(ols)
-
-#ols won´t work
-``
-When we look at the normal Q-Q plot it doesn´t appear to show normal values. 
-
-https://www.datasciencecentral.com/7-classical-assumptions-of-ordinary-least-squares-ols-linear/
+* Assumption 4:Observations of the error term are uncorrelated with each other
+* Assumption 5:The error term has a constant variance (no heteroscedasticity)
+When we look at the graph for France the line is not flat at all, which means it is heteroscedasticity. If the line had been flat it would have been homoscedasticity.
+* Assumption 6:The error term is normally distributed (optional)
 
 
 ## Other determinants of inequity
 
-We have chosen to look at km, education and life expectancy. We want to see what the new variables have to say on the Gini.
+We have chosen to look at km, education and life expectancy to see if there are other determinants of inequity. We want to see what the new variables have to say on the Gini.
 
 ### Estimate a multiple linear regression model with you new variables for 2010 and give a small interpretation of your findings.
 
@@ -773,29 +747,6 @@ In a multiple linear regression model, we use several variables to see the effec
 $$
 Y_i = \beta_0 + \beta_1X_{1i} + \beta_2X_{2i}+... + \beta_kX_{ki}+u_i
 $$
-
-```{r}
-#| echo = FALSE
-mlrdata <- Denmark2010
-lm.7 = lm(Gini2 ~ gdp_per_capita +Edu , mlrdata) 
-lm.8 = lm(Gini2 ~ gdp_per_capita + Road, mlrdata)
-lm.9 = lm(Gini2 ~ gdp_per_capita + Edu + Road, mlrdata)
-lm.10 = lm(Gini2 ~ gdp_per_capita + lea, mlrdata)
-lm.11 = lm(Gini2 ~ gdp_per_capita + Edu + lea, mlrdata)
-lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
-
-
-#Gen Table
-  huxreg(
-  list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9,"Model 4" = lm.10,"Model 5" = lm.11, "Model 6" = lm.12),
-  statistics = c(N = "nobs", R2 = "r.squared"),
-  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Motorway = "Road", Lifeexp = "lea", const. = "(Intercept)"),
-  note = "Note: {stars} T statistics in brackets."
-  )
-
-```
-
-In Denmark, we can see that models 1, 2 and 4 all have a negative effect when it comes to the variables being dependent on each other. in model 5, where we look at education and life expectancy, we can see a positive effect. the same in model 6 with motorway and life expectancy. when we look at R2, this is high on model 3. but since we only have 4 observations from Denmark, it is not possible to draw any conclusion as to whether these variables are relevant to each other
 
 ```{r}
 #| echo = FALSE
@@ -819,47 +770,6 @@ lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
 ```
 France is the country with the most observations. Here we can see that both models 2,4 and 6 have positive effects on the Gini. But all R2 are quite low so we cannot say with certainty that these variables have any effect on the Gini
 
-```{r}
-#| echo = FALSE
-mlrdata <- HungarySlovakia2010
-lm.7 = lm(Gini2 ~ gdp_per_capita +Edu , mlrdata) 
-lm.8 = lm(Gini2 ~ gdp_per_capita + Road, mlrdata)
-lm.9 = lm(Gini2 ~ gdp_per_capita + Edu + Road, mlrdata)
-lm.10 = lm(Gini2 ~ gdp_per_capita + lea, mlrdata)
-lm.11 = lm(Gini2 ~ gdp_per_capita + Edu + lea, mlrdata)
-lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
-
-
-#Gen Table
-  huxreg(
-  list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9,"Model 4" = lm.10,"Model 5" = lm.11, "Model 6" = lm.12),
-  statistics = c(N = "nobs", R2 = "r.squared"),
-  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Motorway = "Road", Lifeexp = "lea", const. = "(Intercept)"),
-  note = "Note: {stars} T statistics in brackets."
-  )
-
-```
-Again we have chosen to merge Hungary and Slovakia when we are going to do this multiple regression analysis. here we can see that models 4 and 5 have a positive effect on Gini. Model 5, which has education and life expectancy as variables, both values are positive but they have a rather low R2, which means that they do not have such a strong correlation anyway.
-
-```{r}
-#| echo = FALSE
-mlrdata <- Portugal2010
-lm.7 = lm(Gini2 ~ gdp_per_capita +Edu , mlrdata) 
-lm.8 = lm(Gini2 ~ gdp_per_capita + lea, mlrdata)
-lm.9 = lm(Gini2 ~ gdp_per_capita + Edu + lea, mlrdata)
-
-
-
-#Gen Table
-  huxreg(
-  list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9),
-  statistics = c(N = "nobs", R2 = "r.squared"),
-  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Lifeexp = "lea", const. = "(Intercept)"),
-  note = "Note: {stars} T statistics in brackets."
-  )
-
-```
-Portugal had no observations on the Motorway, we have therefore removed this variable from these observations. we are then left with three models. and we can see that all the models are positive, model 1 has a higher R2 than model 2 has. while model 3 has a perfect 1. but since we only have 3 observations we cannot put much faith in this R2.
 
 ### Discuss the overall fit of your model
 
@@ -872,13 +782,22 @@ We want to see if variable education, motorway and life expectancy have a connec
 
 
 
+# Assignment 3 
+
+info 
 
 A slope coeffisient tells us the expected change in Yi when Xi increases by one 
 
+```{r normal q-q plot
+qqnorm(ols)
+qqline(ols)
 
+#ols won´t work
+``
+When we look at the normal Q-Q plot it doesn´t appear to show normal values. 
 
+(https://www.datasciencecentral.com/7-classical-assumptions-of-ordinary-least-squares-ols-linear/)
 
-# Assignment 3 
 
 ```{r
 BNP2010 %>%
@@ -933,3 +852,68 @@ ggplot(Portugal2010, aes(x = gdp_per_capita, y = Gini)) +
   geom_smooth(method = "lm") + 
   labs(title = "Gini and GDP per capita for Portugal",x = "GDP per capita 2010", Y = "Gini")
 ```
+
+```{r}
+#| echo = FALSE
+mlrdata <- Denmark2010
+lm.7 = lm(Gini2 ~ gdp_per_capita +Edu , mlrdata) 
+lm.8 = lm(Gini2 ~ gdp_per_capita + Road, mlrdata)
+lm.9 = lm(Gini2 ~ gdp_per_capita + Edu + Road, mlrdata)
+lm.10 = lm(Gini2 ~ gdp_per_capita + lea, mlrdata)
+lm.11 = lm(Gini2 ~ gdp_per_capita + Edu + lea, mlrdata)
+lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
+
+
+#Gen Table
+  huxreg(
+  list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9,"Model 4" = lm.10,"Model 5" = lm.11, "Model 6" = lm.12),
+  statistics = c(N = "nobs", R2 = "r.squared"),
+  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Motorway = "Road", Lifeexp = "lea", const. = "(Intercept)"),
+  note = "Note: {stars} T statistics in brackets."
+  )
+
+```
+
+In Denmark, we can see that models 1, 2 and 4 all have a negative effect when it comes to the variables being dependent on each other. in model 5, where we look at education and life expectancy, we can see a positive effect. the same in model 6 with motorway and life expectancy. when we look at R2, this is high on model 3. but since we only have 4 observations from Denmark, it is not possible to draw any conclusion as to whether these variables are relevant to each other.
+
+```{r}
+#| echo = FALSE
+mlrdata <- HungarySlovakia2010
+lm.7 = lm(Gini2 ~ gdp_per_capita +Edu , mlrdata) 
+lm.8 = lm(Gini2 ~ gdp_per_capita + Road, mlrdata)
+lm.9 = lm(Gini2 ~ gdp_per_capita + Edu + Road, mlrdata)
+lm.10 = lm(Gini2 ~ gdp_per_capita + lea, mlrdata)
+lm.11 = lm(Gini2 ~ gdp_per_capita + Edu + lea, mlrdata)
+lm.12 = lm(Gini2 ~ gdp_per_capita +Road + lea, mlrdata)
+
+
+#Gen Table
+  huxreg(
+  list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9,"Model 4" = lm.10,"Model 5" = lm.11, "Model 6" = lm.12),
+  statistics = c(N = "nobs", R2 = "r.squared"),
+  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Motorway = "Road", Lifeexp = "lea", const. = "(Intercept)"),
+  note = "Note: {stars} T statistics in brackets."
+  )
+
+```
+Again we have chosen to merge Hungary and Slovakia when we are going to do this multiple regression analysis. here we can see that models 4 and 5 have a positive effect on Gini. Model 5, which has education and life expectancy as variables, both values are positive but they have a rather low R2, which means that they do not have such a strong correlation anyway.
+
+```{r}
+#| echo = FALSE
+mlrdata <- Portugal2010
+lm.7 = lm(Gini2 ~ gdp_per_capita +Edu , mlrdata) 
+lm.8 = lm(Gini2 ~ gdp_per_capita + lea, mlrdata)
+lm.9 = lm(Gini2 ~ gdp_per_capita + Edu + lea, mlrdata)
+
+
+
+#Gen Table
+  huxreg(
+  list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9),
+  statistics = c(N = "nobs", R2 = "r.squared"),
+  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Lifeexp = "lea", const. = "(Intercept)"),
+  note = "Note: {stars} T statistics in brackets."
+  )
+
+```
+Portugal had no observations on the Motorway, we have therefore removed this variable from these observations. we are then left with three models. and we can see that all the models are positive, model 1 has a higher R2 than model 2 has. while model 3 has a perfect 1. but since we only have 3 observations we cannot put much faith in this R2.
