--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -493,7 +493,29 @@ lm(Gini ~ Road, data = France2010) %>% tidy()%>% kable(., digits=4)
 
 # Assignment 3 
 
-### Test if the effect of development is significantly different for different subsets of countries in your data set.
+
+
+```{r dummy variabel}
+gdppop2010$Fra <- ifelse(gdppop2010$nuts0 == "FR", 1,0)
+
+```
+
+```{r}
+gdppop2010a <- gdppop2010
+lm.20 = lm(Gini2 ~ gdp_per_capita + Fra, gdppop2010)
+lm.21 = lm(Gini2 ~ gdp_per_capita + Fra + Road, gdppop2010)
+
+#Gen Table
+  huxreg(
+  list("Model 1" = lm.20, "Model 2" = lm.21),
+  statistics = c(N = "nobs", R2 = "r.squared"),
+   stars = c("*" = 0.1, "**" = 0.05, "***" =0.01),
+  note = "Note: {stars} T statistics in brackets."
+  )
+```
+
+
+### Test if the effect of development is significantly different for different subsets of countries in your data set.instal
 
 ```{r}
 #| echo = FALSE
